WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300457
[Win] Regression - WebGL context lost during navigation
https://bugs.webkit.org/show_bug.cgi?id=300457
Summary
[Win] Regression - WebGL context lost during navigation
Ian Grunert
Reported
2025-10-09 11:59:25 PDT
Causing many test failures on win-tests-ews. I think this is due to an interaction with the GPU Process / RemoteGraphicsContextGL. Needs fix for
bug 300412
to validate locally, crashes too early otherwise. Reverting
https://commits.webkit.org/301043@main
fixes the issue.
Attachments
Add attachment
proposed patch, testcase, etc.
Ian Grunert
Comment 1
2025-10-09 12:22:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52076
EWS
Comment 2
2025-10-10 14:33:32 PDT
Committed
301330@main
(81cf7e110f9a): <
https://commits.webkit.org/301330@main
> Reviewed commits have been landed. Closing PR #52076 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-10-10 14:34:11 PDT
<
rdar://problem/162395104
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug