[Win] Regression - WebGL context lost during navigation https://bugs.webkit.org/show_bug.cgi?id=300457

Reviewed by Don Olmstead.

Introduced by https://commits.webkit.org/301043@main there appears to be
a bad interaction when the GPU process is enabled. Reloading a test such
as fast/canvas/webgl/canvas-zero-size.html will cause the WebGL context
to be lost. Similar interaction happening in the test suite is causing
a large number of test failures.

Using ifdefs to revert to the old behavior on Windows for now, though I
am surprised this isn't an issue for GTK with GPU process.

Canonical link: https://commits.webkit.org/301330@main